Update flame 1 and flame 4

--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ html a {
 body {
   background-color: #ffffff;
   color: #555555;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 14px;
   overflow-x: hidden;
 }
@@ -330,6 +330,45 @@ p {
   text-transform: capitalize;
   font-weight: 600;
   font-size: 26px;
+}
+.logo {
+  left: 22px;
+  position: fixed;
+  top: 22px;
+  z-index: 1;
+}
+.logo a {
+  display: block;
+}
+.login-face {
+  right: 22px;
+  position: fixed;
+  top: 22px;
+  z-index: 1;
+}
+.login-face a.btn-login {
+  display: block;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
+  font-weight: 600;
+  background-color: #00b1b7;
+  color: white;
+  padding: 4px 15px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.login-face a.btn-login:focus,
+.login-face a.btn-login:hover {
+  background-color: #00C8CE;
 }
 @font-face {
   font-family: 'Open Sans';
@@ -364,6 +403,27 @@ p {
   src: url('../fonts/glyphicons-halflings-regular.eot');
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Medium.eot');
+  src: url('../fonts/HelveticaNeue-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeue-Medium.woff') format('woff'), url('../fonts/HelveticaNeue-Medium.ttf') format('truetype'), url('../fonts/HelveticaNeue-Medium.svg#HelveticaNeue-Medium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Light.eot');
+  src: url('../fonts/HelveticaNeue-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeue-Light.woff') format('woff'), url('../fonts/HelveticaNeue-Light.ttf') format('truetype'), url('../fonts/HelveticaNeue-Light.svg#HelveticaNeue-Light') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Bold.eot');
+  src: url('../fonts/HelveticaNeue-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaNeue-Bold.woff') format('woff'), url('../fonts/HelveticaNeue-Bold.ttf') format('truetype'), url('../fonts/HelveticaNeue-Bold.svg#HelveticaNeue-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
 .glyphicon {
   position: relative;
   top: 1px;
@@ -374,4 +434,167 @@ p {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.countdown {
+  left: 22px;
+  position: fixed;
+  bottom: 22px;
+  z-index: 1;
+}
+.countdown .title-countdown {
+  display: block;
+  width: 100%;
+  text-transform: uppercase;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  position: relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.countdown .title-countdown:after {
+  width: 100px;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+}
+.countdown ul#countdown {
+  position: relative;
+  margin: 0 auto;
+  overflow: hidden;
+  display: block;
+}
+.countdown ul#countdown li {
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  padding-bottom: 20px;
+}
+.countdown ul#countdown li .number {
+  color: white;
+  font-size: 32px;
+  font-weight: 700;
+  position: relative;
+  padding-right: 10px;
+  line-height: 25px;
+}
+.countdown ul#countdown li .number:after {
+  content: ':';
+  color: white;
+  font-size: 32px;
+  font-weight: 700;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.countdown ul#countdown li .label {
+  text-transform: uppercase;
+  font-size: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+.countdown ul#countdown li:last-child .number {
+  padding-right: 0;
+}
+.countdown ul#countdown li:last-child .number:after {
+  content: '';
+}
+.flame1 .title-flame1 {
+  font-size: 44px;
+  color: white;
+  font-weight: 300;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.35);
+}
+.flame1 .sub-title-flame1 {
+  font-size: 44px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.35);
+  padding-bottom: 15px;
+  position: relative;
+  margin-bottom: 15px;
+}
+.flame1 .sub-title-flame1:after {
+  height: 3px;
+  width: 100px;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  background: white;
+  left: 0;
+}
+.flame1 .description-flame1 {
+  font-size: 25px;
+  color: white;
+  font-weight: 300;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.35);
+}
+.flame1 .view-gallery {
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 1em;
+  padding: 8px 20px;
+  color: #2c2c2c;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #fed8a1;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  border-radius: 8px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.flame1 .view-gallery:focus,
+.flame1 .view-gallery:hover {
+  color: #2c2c2c;
+  background-color: #ffd899;
+}
+.flame4 .title-flame4 {
+  display: block;
+  font-size: 35px;
+  color: #00b1b7;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.flame4 .flame4-content {
+  width: 315px;
+  color: #5c5c5c;
+  display: block;
+}
+.flame4 .btn-flame4 {
+  margin-top: 15px;
+  font-size: 16px;
+  width: 280px;
+  height: 42px;
+  vertical-align: middle;
+  background-color: #00b1b7;
+  color: white;
+  text-align: center;
+  display: block;
+  line-height: 42px;
+  font-weight: 700;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.flame4 .btn-flame4:focus,
+.flame4 .btn-flame4:hover {
+  background-color: #00c5cc;
 }
