--- a/less/main.less
+++ b/less/main.less
@@ -3,6 +3,12 @@
 @import "mixins.less";
 @import "global.less";
 @import "font.less";
+@import "countdown";
 
-@import "header.less";
 @import "footer.less";
+
+@import "flame1.less";
+@import "flame2.less";
+@import "flame3.less";
+@import "flame4.less";
+
