--- a/less/font.less
+++ b/less/font.less
@@ -44,7 +44,6 @@
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-
   src: url('../fonts/glyphicons-halflings-regular.eot');
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
   url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'),
@@ -52,6 +51,40 @@
   url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'),
   url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Medium.eot');
+  src: url('../fonts/HelveticaNeue-Medium.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/HelveticaNeue-Medium.woff') format('woff'),
+  url('../fonts/HelveticaNeue-Medium.ttf')  format('truetype'),
+  url('../fonts/HelveticaNeue-Medium.svg#HelveticaNeue-Medium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Light.eot');
+  src: url('../fonts/HelveticaNeue-Light.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/HelveticaNeue-Light.woff') format('woff'),
+  url('../fonts/HelveticaNeue-Light.ttf')  format('truetype'),
+  url('../fonts/HelveticaNeue-Light.svg#HelveticaNeue-Light') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Bold.eot');
+  src: url('../fonts/HelveticaNeue-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/HelveticaNeue-Bold.woff') format('woff'),
+  url('../fonts/HelveticaNeue-Bold.ttf')  format('truetype'),
+  url('../fonts/HelveticaNeue-Bold.svg#HelveticaNeue-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
 .glyphicon {
   position: relative;
   top: 1px;
