--- a/less/global.less
+++ b/less/global.less
@@ -51,3 +51,33 @@ p {
   font-weight: 600;
   font-size: 26px;
 }
+
+.logo {
+  left: 22px;
+  position: fixed;
+  top: 22px;
+  z-index: 1;
+  a {
+    display: block;
+  }
+}
+
+.login-face {
+  right: 22px;
+  position: fixed;
+  top: 22px;
+  z-index: 1;
+  a.btn-login {
+    display: block;
+    .border-radius(6px);
+    font-weight: 600;
+    background-color: #00b1b7;
+    color: white;
+    padding: 4px 15px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    .transition();
+    &:focus, &:hover {
+      background-color: #00C8CE;
+    }
+  }
+}
