--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@base-font: 'Open Sans', sans-serif;
+@base-font: 'Helvetica Neue', sans-serif;
 @pari-font: 'Parisish';
 @nexa-font: 'NexaLight';
 @bam-font: 'iCielBambola';
