--- a/less/frame4.less
+++ b/less/frame4.less
@@ -1,17 +1,17 @@
-.flame4{
-  .title-flame4{
+.frame4{
+  .title-frame4{
     display: block;
     font-size: 35px;
     color: #00b1b7;
     font-weight: 700;
     margin-bottom: 10px;
   }
-  .flame4-content{
+  .frame4-content{
     width: 315px;
     color: #5c5c5c;
     display: block;
   }
-  .btn-flame4{
+  .btn-frame4{
     margin-top: 15px;
     font-size: 16px;
     width: 280px;
