--- a/less/frame1.less
+++ b/less/frame1.less
@@ -1,12 +1,12 @@
-.flame1{
-  .title-flame1{
+.frame1{
+  .title-frame1{
     font-size: 44px;
     color: white;
     font-weight: 300;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.35);
   }
 
-  .sub-title-flame1{
+  .sub-title-frame1{
     font-size: 44px;
     color: white;
     text-transform: uppercase;
@@ -26,7 +26,7 @@
     }
   }
 
-  .description-flame1{
+  .description-frame1{
     font-size: 25px;
     color: white;
     font-weight: 300;
