--- a/less/main.less
+++ b/less/main.less
@@ -7,8 +7,8 @@
 
 @import "footer.less";
 
-@import "flame1.less";
-@import "flame2.less";
-@import "flame3.less";
-@import "flame4.less";
+@import "frame1.less";
+@import "frame2.less";
+@import "frame3.less";
+@import "frame4.less";
 
