--- a/less/main.less
+++ b/less/main.less
@@ -8,7 +8,7 @@
 @import "footer.less";
 
 @import "frame1.less";
-@import "frame2.less";
+@import "frame2";
 @import "frame3.less";
 @import "frame4.less";
 
