--- a/less/frame1.less
+++ b/less/frame1.less
@@ -1,4 +1,10 @@
 .frame1{
+  padding: 0 0 120px 85px;
+  @media (max-width: 360px) {
+    padding: 15px;
+  }
+  /* Reset the white-space so content wraps as expected */
+  white-space: normal;
   .title-frame1{
     font-size: 44px;
     color: white;
