--- a/less/frame4.less
+++ b/less/frame4.less
@@ -1,4 +1,7 @@
 .frame4{
+  padding: 0 0 0 80px;
+  /* Reset the white-space so content wraps as expected */
+  white-space: normal;
   .title-frame4{
     display: block;
     font-size: 35px;
