--- a/css/main.css
+++ b/css/main.css
@@ -570,7 +570,7 @@ p {
   background: #fff;
   text-align: center;
   position: relative;
-  z-index: 995;
+  z-index: 100;
   opacity: 0;
   box-shadow: 0 3px 36px 0 rgba(0, 0, 0, 0.6);
 }
@@ -1070,7 +1070,7 @@ p {
   margin: 0 auto 25px;
   display: block;
 }
-#loginWithFacebook .dialog-content .dialog-header .btn-login {
+#loginWithFacebook .dialog-content .dialog-header .btn-login-with-facebook {
   color: white;
   font-size: 25px;
   margin-bottom: 30px;
@@ -1079,7 +1079,7 @@ p {
   padding: 8px 10px 6px;
   position: relative;
 }
-#loginWithFacebook .dialog-content .dialog-header .btn-login:after {
+#loginWithFacebook .dialog-content .dialog-header .btn-login-with-facebook:after {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -1096,6 +1096,124 @@ p {
   font-size: 14px;
   text-align: center;
   font-weight: 300;
+}
+#dialogGallery .dialog-content {
+  width: 100%;
+  max-width: 100%;
+  height: 100vh;
+}
+#dialogGallery .dialog-content .gallery-background {
+  z-index: 101;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content {
+  height: 100vh;
+  width: 100%;
+  display: block;
+  position: relative;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 65%;
+  color: white;
+  text-align: center;
+  padding-top: 30px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery i.icon-gallery {
+  background: url("../images/icon-gallery.png") no-repeat center;
+  width: 26px;
+  height: 31px;
+  left: 50%;
+  margin-left: -13px;
+  top: 0;
+  position: absolute;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery i.icon-gallery:after {
+  content: '';
+  position: absolute;
+  width: 200px;
+  height: 1px;
+  background-color: white;
+  left: 45px;
+  top: 15px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery i.icon-gallery:before {
+  content: '';
+  position: absolute;
+  width: 200px;
+  height: 1px;
+  background-color: white;
+  right: 45px;
+  top: 15px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .title-gallery {
+  color: white;
+  font-size: 50px;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-top: 15px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .total-gallery {
+  margin-top: 15px;
+  display: block;
+  padding: 30px 80px;
+  border-top: 1px solid #aaf0f3;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .total-gallery .title-total-gallery {
+  color: white;
+  font-size: 25px;
+  font-weight: 300;
+  margin-bottom: 15px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .total-gallery .result {
+  width: 240px;
+  margin: 0 auto;
+  padding: 0 0 0 160px;
+  position: relative;
+  color: white;
+  font-size: 25px;
+  font-weight: 300;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .total-gallery .result span {
+  line-height: 75px;
+  font-weight: 300;
+  position: absolute;
+  color: white;
+  font-size: 60px;
+  left: 0;
+  top: 0;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .btn-gallery {
+  background-color: white;
+  color: #0091a6;
+  font-size: 18px;
+  text-transform: uppercase;
+  line-height: 40px;
+  height: 40px;
+  width: 150px;
+  text-align: center;
+  display: inline-block;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .btn-gallery.close-dialog-gallery {
+  margin-left: 20px;
+}
+#dialogGallery .dialog-content .gallery-background .gallery-content .group-gallery .btn-gallery:hover {
+  background-color: #dddddd;
 }
 .frame1 {
   padding: 0 0 120px 85px;
