Update question frame 3

--- a/less/frame3.less
+++ b/less/frame3.less
@@ -9,7 +9,7 @@
     top: 0;
     margin-left: -163px;
   }
-  .question-list {
+  #question-list {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -120,7 +120,7 @@
       }
     }
   }
-  .question, .reward, .lost {
+  #question, #reward, #lost {
     position: relative;
     width: 100%;
     height: 100vh;
@@ -306,7 +306,7 @@
       }
     }
   }
-  .lost {
+  #lost {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
