--- a/less/frame1.less
+++ b/less/frame1.less
@@ -39,8 +39,7 @@
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.35);
   }
 
-
-  .view-gallery {
+  .view-gallery-btn {
     cursor: pointer;
     display: inline-block;
     margin-top: 1em;
